# dH

./: .gitattributes  .gitignore  BRANCHES.md  BUILDING.md  BUILD_NOTES.md  Brimstone_src.sln  CLAUDE.md  CMAKE_BUILD.md  CMAKE_MIGRATION.md  CMAKE_SUMMARY.md  CMakeLists.txt  COMPONENT_INVENTORY.md  CYTHON_WRAPPER_DESIGN.md  DATASETS.md  DEPRECATION.md  DEVELOPMENT_TIMELINE.md  DOCKER.md  HIERARCHICAL_BAYES_DESIGN.md  HIERARCHICAL_BAYES_FOLLOWUPS.md  IMPLEMENTATION_REPORT.md  README.md  REORGANIZATION.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PHASE3.md  RT_VIEW_HISTORY.md  STRUCTURE.md  UPDATE_PENBEAMEDIT.md  WXWIDGETS_CONVERSION.md  build_windows.bat  docker-compose.yml  knowledge_base.pl  merge_pheonixrt_subtree.sh  run_brimstone_knee.bat  run_brimstone_knee_7beam.bat  validate_cmake.sh
Brimstone/: Brimstone.cpp  Brimstone.dsp  Brimstone.dsw  Brimstone.rc  Brimstone.sln  Brimstone.vcproj  Brimstone.vcxproj  BrimstoneDoc.cpp  BrimstoneDoc.h  BrimstoneView.cpp  BrimstoneView.h  CMakeLists.txt  DvhViewHtml.cpp  DvhViewHtml.h  Graph.cpp  Graph.h  MainFrm.cpp  MainFrm.h  OptGraphHtml.cpp  OptGraphHtml.h  OptThread.cpp  OptThread.h  OptimizerDashboard.cpp  PlanarView.cpp  PlanarView.h  PrescDlg.cpp  PrescriptionBar.cpp  PrescriptionToolbar.cpp  PrescriptionToolbar.h  RenderControlDlg.cpp  RenderControlDlg.h  Resource.h  SeriesDicomImporter.cpp  StdAfx.cpp  StdAfx.h  WebView2Host.cpp  WebView2Host.h  packages.config  resource.h  stdafx.h
FTL/: FTL.sln  (+3 more)
GEOM_BASE/: CMakeLists.txt
GEOM_MODEL/: CMakeLists.txt
GEOM_MODEL/include/: UtilMacros.h  Volumep.h
GEOM_VIEW/: CMakeLists.txt  DRRRenderable.cpp
GEOM_VIEW/include/: DRRRenderable.h
GUI_BASE/: CMakeLists.txt
Graph/: CMakeLists.txt  DataSeries.cpp  Graph.cpp  Graph.vcproj  Graph.vcxproj  HistogramDataSeries.cpp  ReadMe.txt  TargetDVHSeries.cpp  stdafx.h
Graph/include/: DataSeries.h  Graph.h  HistogramDataSeries.h  TargetDVHSeries.h
MODEL_BASE/: CMakeLists.txt
MTL/: CMakeLists.txt  MathUtil.h  MatrixD.h  MatrixNxM.h  MatrixOps.h  VectorD.h  VectorN.h  VectorOps.h
OPTIMIZER_BASE/: CMakeLists.txt
PenBeamEdit/: CMakeLists.txt  DEPENDENCIES.md  Histogram.cpp  Histogram.h  HistogramMatcher.cpp  HistogramMatcher.h  MainFrame.cpp  MainFrame.h  MainFrm.cpp  PenBeamEdit.cpp  PenBeamEdit.dsp  PenBeamEdit.dsw  PenBeamEdit.h  PenBeamEdit.rc  PenBeamEditApp.cpp  PenBeamEditApp.h  PenBeamEditCanvas.cpp  PenBeamEditCanvas.h  PenBeamEditDoc.cpp  PenBeamEditDoc.h  PenBeamEditView.cpp  PenBeamEditView.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  TransitionPlan.txt  resource.h
PenBeamEdit/res/: PenBeamEdit.rc2
RT_MODEL/: BasisGroup.cpp  Beam.cpp  BeamDoseCalc.cpp  BeamIMRT.cpp  CMakeLists.txt  EnergyDepKernel.cpp  Histogram.cpp  HistogramMatcher.cpp  InvFilterEM.cpp  KLDivTerm.cpp  Plan.cpp  PlanIMRT.cpp  Prescription.cpp  RT_MODEL.dsp  RT_MODEL.vcproj  Series.cpp  StdAfx.h  Structure.cpp  TCP_NTCP_Optimizer.cpp  TreatmentMachine.cpp  VOITerm.cpp
RT_MODEL/DicomImEx/: DicomImEx.dsp  DicomImEx.dsw  DicomImEx.vcproj  Readme.txt  SeriesDicomImporter.cpp  SeriesDicomImporter.h  StdAfx.h
RT_MODEL/GenBeamlets/: GenBeamlets.cpp  GenBeamlets.dsp  GenBeamlets.dsw  GenBeamlets.h  Resource.h
RT_MODEL/GenDens/: GenDens.cpp  GenDens.dsp  GenDens.dsw  GenDens.rc  StdAfx.cpp
RT_MODEL/Test/: ReadMe.txt
RT_MODEL/TestHisto/: StdAfx.cpp  StdAfx.h  TestHisto.cpp  TestHisto.dsp  TestHisto.dsw  TestHisto.sln  TestHisto.vcproj
RT_MODEL/include/: Beam.h  BeamDoseCalc.h  BeamIMRT.h  EnergyDepKernel.h  Histogram.h  HistogramMatcher.h  InvFilterEM.h  KLDivTerm.h  Plan.h  PlanIMRT.h  Prescription.h  Series.h  Structure.h  TCP_NTCP_Optimizer.h  TreatmentMachine.h  VOITerm.h
RtModel/: Beam.cpp  BeamDoseCalc.cpp  CMakeLists.txt  ConjGradOptimizer.cpp  EnergyDepKernel.cpp  Histogram.cpp  HistogramGradient.cpp  KLDivTerm.cpp  ObjectiveFunction.cpp  Plan.cpp  PlanOptimizer.cpp  PlanPyramid.cpp  Prescription.cpp  RtModel.vcxproj  Series.cpp  SigmaEstimator.cpp  SigmaEstimator_Integration_Example.cpp  SphereConvolve.cpp  Structure.cpp  stdafx.h
RtModel/include/: Beam.h  ConjGradOptimizer.h  Histogram.h  HistogramGradient.h  ItkUtils.h  KLDivTerm.h  MathUtil.h  MatrixNxM.h  Plan.h  Prescription.h  SigmoidParams.h  Structure.h  VOITerm.h  VectorN.h  VectorOps.h  utilmacros.h
XMLLogging/: CMakeLists.txt  XMLLogFile.h
python/: BRIMSTONE_DEBUG_STATUS.md  BUILD_NATIVE.md  CMakeLists.txt  README_VARIATIONAL_BAYES.md  RTMODEL_PYTHON_DLL_PLAN.md  automate_brimstone_ui.py  class_embeddings.json  component_embeddings.json  embed_classes.py  embed_components.py  learned_hessian_entropy.py  learned_optimizer.py  optimize_with_lbfgs.py  pyproject.toml  rtmodel_bindings.cpp  run_knee.py  setup.py  tcia_download.py  workflow_example.py
python/examples/: generate_amortized_data.py
python/experiments/: sigma_calibration.py
python/pybrimstone/: __init__.py  bootstrap.py  core.pxd  core.pyx  course_prior.py  datasets.py  dose_calc.py  dvh_uncertainty.py  free_energy.py  hierarchical_bayes.py  kl_term.py  objective_terms.py  phase_optimizer.py  prescription.py  terma_kernel_dose.py  tg263_model.py  tg263_training.py
python/tests/: conftest.py  test_bootstrap.py  test_conjugate_gradient.py  test_course_prior.py  test_datasets.py  test_dvh_uncertainty.py  test_entropy_grad.py  test_free_energy.py  test_hierarchical_bayes.py  test_histogram.py  test_kl_divergence.py  test_kl_term.py  test_numerics_lift.py  test_parameter_transform.py  test_phase_optimizer.py  test_prescription.py  test_separable_grad.py  test_sigma_estimation.py  test_terma_kernel_dose.py  test_tg263_model.py  test_tg263_training.py
python/umap/: README.md  build_inventory_embeddings.py  inventory_embeddings.npy  inventory_meta.json  umap_layout.py  umap_sweep.json  umap_sweep.py
tests/: CMakeLists.txt  README.md  RtModel_Tests.sln
tests/RT_VIEW/: test_beam_renderable.cpp
tests/RtModel/: test_dose_calc.cpp  test_histogram.cpp  test_optimizer.cpp  test_plan.cpp
tests/catch2/: catch.hpp
tests/prolog/: rtmodel_verification.pl
web/: CMakeLists.txt  vcpkg.json
web/service/: CMakeLists.txt
(+516 files in other folders)
